updated for title

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>0x1772dsadasdad</title>
+    <title>0x1772</title>
     <meta name="author" content="mikail üstüner">
     <meta name="description" content="mikail üstüner tarafından geliştirilmiş ve 0x1772.me alan adıyla kullanıma sunulan portfolyo internet sitesi anasayfası">
     <meta name="keywords" content="mikail, üstüner, developer, web, penetration, testing, security, tools, güvenlik, türkiye, siber, güvenlik, uzman, yazılım, geliştirici, data, scientist, designer, creator, 0x1772, 0x1773, 0x1771, reach, contact, javascript, php, ruby, languages, english, coffee, projects, github">
