--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>0x1772</title>
     <meta name="author" content="mikail üstüner">
     <meta name="description" content="mikail üstüner tarafından geliştirilmiş ve 0x1772.me alan adıyla kullanıma sunulan portfolyo internet sitesi anasayfası">
-    <meta name="keywords" content="mikail, üstüner, developer, web, penetration, testing, security, tools, güvenlik, türkiye, siber, güvenlik, uzman, yazılım, geliştirici, data, scientist, designer, creator, 0x1772, 0x1773, 0x1771, reach, contact, javascript, php, ruby, languages, english, coffee, projects, github">
+    <meta name="keywords" content="mikail, üstüner, developer, web, penetration, testing, security, ustuner, üstüner, mikail, mikayil, tools, güvenlik, türkiye, siber, güvenlik, uzman, yazılım, geliştirici, data, scientist, designer, creator, 0x1772, 0x1773, 0x1771, reach, contact, javascript, php, ruby, languages, english, coffee, projects, github">
     
     <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com/">
