--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     <link rel="stylesheet" href="assets/css/aos.css">
     <link rel="stylesheet" href="assets/css/style.css">
     <link rel="stylesheet" href="assets/css/iconoir.css">
+    <link rel="stylesheet" href="assets/space.css">
 
 </head>
 <body>
@@ -38,6 +39,7 @@
                             <li><a href="about.html">About</a></li>
                             <li><a href="works.html">Works</a></li>
                             <li><a href="contact.html">Contact</a></li>
+                            <li><a href="space.html">SpacePort</a></li>
                         </ul>
                         <a href="contact.html" class="theme-btn">Let's talk</a>
                     </nav>
