--- a/space.html
+++ b/space.html
@@ -21,7 +21,6 @@
 
 </head>
 <body>
-    <iframe src="https://space-port-wine.vercel.app/" style="border: 0; width: 100%; height: 100%; display: block; height:100%">Your browser doesn't support iFrames.</iframe>
 
     <main class="main-homepage">
 
@@ -39,7 +38,7 @@
                             <li><a href="about.html">About</a></li>
                             <li><a href="works.html">Works</a></li>
                             <li><a href="contact.html">Contact</a></li>
-                            <li class="active"><a href="space.html">SpacePort</a></li>
+                            <li class="active"><a href="space.html">Space</a></li>
                         </ul>
                         <a href="contact.html" class="theme-btn">Let's talk</a>
                     </nav>
@@ -50,7 +49,8 @@
                 </div>
             </div>
         </header>
-        </section>
+        <iframe class="full-screen-preview__frame" src="https://space-port-wine.vercel.app/" name="preview-frame" noresize="noresize" style="height: 1080px; width:100%" frameborder="0">
+        </iframe>
 
         <!-- Footer -->
         <footer class="footer-area">
