added space iframe page

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                             <li><a href="about.html">About</a></li>
                             <li><a href="works.html">Works</a></li>
                             <li><a href="contact.html">Contact</a></li>
-                            <li><a href="space.html">SpacePort</a></li>
+                            <li><a href="space.html">Space</a></li>
                         </ul>
                         <a href="contact.html" class="theme-btn">Let's talk</a>
                     </nav>
