--- a/contact.html
+++ b/contact.html
@@ -38,6 +38,7 @@
                             <li><a href="about.html">About</a></li>
                             <li><a href="works.html">Works</a></li>
                             <li class="active"><a href="contact.html">Contact</a></li>
+                            <li><a href="space.html">Space</a></li>
                         </ul>
                         <a href="contact.html" class="theme-btn">Let's talk</a>
                     </nav>
