added spacedesk with iframe & updated CNAME edited html files for new page

--- a/about.html
+++ b/about.html
@@ -6,10 +6,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="mikail üstüner tarafından geliştirilmiş ve 0x1772.me alan adıyla kullanıma sunulan portfolyo internet sitesi hakkında sayfası">
-    <title>0x1772</title>
+    <meta name="description" content="mikail üstüner tarafından geliştirilmiş ve Mikail Üstüner.me alan adıyla kullanıma sunulan portfolyo internet sitesi hakkında sayfası">
+    <title>Mikail Üstüner</title>
     <meta name="author" content="mikail üstüner">
-    <meta name="keywords" content="mikail, üstüner, developer, web, penetration, testing, security, tools, güvenlik, türkiye, siber, güvenlik, uzman, yazılım, geliştirici, data, scientist, designer, creator, 0x1772, 0x1773, 0x1771, reach, contact, javascript, php, ruby, languages, english, coffee, projects, github">
+    <meta name="keywords" content="mikail, üstüner, developer, web, penetration, testing, security, tools, güvenlik, türkiye, siber, güvenlik, uzman, yazılım, geliştirici, data, scientist, designer, creator, Mikail Üstüner, 0x1773, 0x1771, reach, contact, javascript, php, ruby, languages, english, coffee, projects, github">
     
     <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com/">
@@ -39,6 +39,8 @@
                             <li class="active"><a href="about.html">About</a></li>
                             <li><a href="works.html">Works</a></li>
                             <li><a href="contact.html">Contact</a></li>
+                            <li><a href="space.html">Space</a></li>
+                            <li><a href="pcdesk.html">JSDesk</a></li>
                         </ul>
                         <a href="contact.html" class="theme-btn">Let's talk</a>
                     </nav>
@@ -127,7 +129,7 @@
                                 <div class="about-profile-box info-box shadow-box h-full">
                                     <img src="assets/images/bg1.webp" alt="BG" class="bg-img">
                                     <div class="inner-profile-icons shadow-box">
-                                        <a href="https://instagram.com/0x1772/">
+                                        <a href="https://instagram.com/mikailustunerr/">
                                             <i class="iconoir-instagram"></i>
                                         </a>
                                         <a href="https://github.com/0x1771/">
@@ -200,7 +202,7 @@
                         <li><a href="contact.html">Contact</a></li>
                     </ul>
                     <p class="copyright">
-                        &copy; All rights reserved by <a href="https://instagram.com/0x1772/"><span>0x1772</span></a>
+                        &copy; All rights reserved by <a href="https://instagram.com/mikailustunerr/"><span>Mikail Üstüner</span></a>
                     </p>
                 </div>
             </div>
