--- a/contact.html
+++ b/contact.html
@@ -5,15 +5,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>0x1772</title>
+    <title>Mikail Üstüner</title>
 
 
     <link rel="preconnect" href="https://fonts.googleapis.com/">
     <link rel="preconnect" href="https://fonts.gstatic.com/" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800&amp;display=swap" rel="stylesheet">
     <meta name="author" content="mikail üstüner">
-    <meta name="description" content="mikail üstüner tarafından geliştirilmiş ve 0x1772.me alan adıyla kullanıma sunulan portfolyo internet sitesi iletişim sayfası">
-    <meta name="keywords" content="mikail, üstüner, developer, web, penetration, testing, security, tools, güvenlik, türkiye, siber, güvenlik, uzman, yazılım, geliştirici, data, scientist, designer, creator, 0x1772, 0x1773, 0x1771, reach, contact, javascript, php, ruby, languages, english, coffee, projects, github">
+    <meta name="description" content="mikail üstüner tarafından geliştirilmiş ve Mikail Üstüner.me alan adıyla kullanıma sunulan portfolyo internet sitesi iletişim sayfası">
+    <meta name="keywords" content="mikail, üstüner, developer, web, penetration, testing, security, tools, güvenlik, türkiye, siber, güvenlik, uzman, yazılım, geliştirici, data, scientist, designer, creator, Mikail Üstüner, 0x1773, 0x1771, reach, contact, javascript, php, ruby, languages, english, coffee, projects, github">
     <link rel="stylesheet" href="assets/css/iconoir.css">
     <link rel="stylesheet" href="assets/css/bootstrap.min.css">
     <link rel="stylesheet" href="assets/css/aos.css">
@@ -39,6 +39,7 @@
                             <li><a href="works.html">Works</a></li>
                             <li class="active"><a href="contact.html">Contact</a></li>
                             <li><a href="space.html">Space</a></li>
+                            <li><a href="pcdesk.html">JSDesk</a></li>
                         </ul>
                         <a href="contact.html" class="theme-btn">Let's talk</a>
                     </nav>
@@ -67,8 +68,8 @@
                                 </div>
                                 <div class="right">
                                     <span>MAIL us</span>
-                                    <h4>info@0x1772.me</h4>
-                                    <h4>contact@0x1772.me</h4>
+                                    <h4>info@Mikail Üstüner.me</h4>
+                                    <h4>contact@Mikail Üstüner.me</h4>
                                 </div>
                             </li>
 
@@ -78,7 +79,7 @@
                                 </div>
                                 <div class="right">
                                     <span>Contact Us (Telegram)</span>
-                                    <h4>@f0x1772</h4>
+                                    <h4>@fMikail Üstüner</h4>
                                 </div>
                             </li>
 
@@ -95,8 +96,8 @@
 
                         <h3 data-aos="fade-up">Social Info</h3>
                         <ul class="social-links d-flex align-center" data-aos="zoom-in">
-                            <li><a class="shadow-box" href="https://linkedin.com/in/0x1772/"><i class="iconoir-linkedin"></i></a></li>
-                            <li><a class="shadow-box" href="https://instagram.com/0x1772/"><i class="iconoir-instagram"></i></a></li>
+                            <li><a class="shadow-box" href="https://linkedin.com/in/Mikail Üstüner/"><i class="iconoir-linkedin"></i></a></li>
+                            <li><a class="shadow-box" href="https://instagram.com/mikailustunerr/"><i class="iconoir-instagram"></i></a></li>
                             <li><a class="shadow-box" href="https://github.com/0x1771/"><i class="iconoir-github"></i></a></li>
                         </ul>
                     </div>
@@ -148,7 +149,7 @@
                         <li><a href="contact.html">Contact</a></li>
                     </ul>
                     <p class="copyright">
-                        &copy; All rights reserved by <a href="https://instagram.com/0x1772/"><span>0x1772</span></a>
+                        &copy; All rights reserved by <a href="https://instagram.com/mikailustunerr/"><span>Mikail Üstüner</span></a>
                     </p>
                 </div>
             </div>
