--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>0x1772</title>
+    <title>Mikail Üstüner</title>
     <meta name="author" content="mikail üstüner">
-    <meta name="description" content="mikail üstüner tarafından geliştirilmiş ve 0x1772.me alan adıyla kullanıma sunulan portfolyo internet sitesi anasayfası">
-    <meta name="keywords" content="mikail, üstüner, developer, web, penetration, testing, security, ustuner, üstüner, mikail, mikayil, tools, güvenlik, türkiye, siber, güvenlik, uzman, yazılım, geliştirici, data, scientist, designer, creator, 0x1772, 0x1773, 0x1771, reach, contact, javascript, php, ruby, languages, english, coffee, projects, github">
+    <meta name="description" content="mikail üstüner tarafından geliştirilmiş ve Mikail Üstüner.me alan adıyla kullanıma sunulan portfolyo internet sitesi anasayfası">
+    <meta name="keywords" content="mikail, üstüner, developer, web, penetration, testing, security, ustuner, üstüner, mikail, mikayil, tools, güvenlik, türkiye, siber, güvenlik, uzman, yazılım, geliştirici, data, scientist, designer, creator, Mikail Üstüner, 0x1773, 0x1771, reach, contact, javascript, php, ruby, languages, english, coffee, projects, github">
     
     <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com/">
@@ -40,6 +40,7 @@
                             <li><a href="works.html">Works</a></li>
                             <li><a href="contact.html">Contact</a></li>
                             <li><a href="space.html">Space</a></li>
+                            <li><a href="pcdesk.html">JSDesk</a></li>
                         </ul>
                         <a href="contact.html" class="theme-btn">Let's talk</a>
                     </nav>
@@ -128,7 +129,7 @@
                                 <div class="about-blog-box info-box shadow-box h-full">
                                     <a href="https://github.com/0x1771/" class="overlay-link"></a>
                                     <img src="assets/images/bg1.webp" alt="Background" class="bg-img">
-                                    <img src="assets/images/gfonts.webp" alt="Github logo for 0x1772.me">
+                                    <img src="assets/images/gfonts.webp" alt="Github logo for Mikail Üstüner.me">
                                     <div class="d-flex align-items-center justify-content-between">
                                         <div class="infos">
                                             <h4>GITHUB</h4>
@@ -165,10 +166,10 @@
                                 <div class="about-profile-box info-box shadow-box h-full">
                                     <img src="assets/images/bg1.webp" alt="BG" class="bg-img">
                                     <div class="inner-profile-icons shadow-box">
-                                        <a href="https://linkedin.com/in/0x1772/">
+                                        <a href="https://linkedin.com/in/Mikail Üstüner/">
                                             <i class="iconoir-linkedin"></i>
                                         </a>
-                                        <a href="https://instagram.com/0x1772/">
+                                        <a href="https://instagram.com/mikailustunerr/">
                                             <i class="iconoir-instagram"></i>
                                         </a>
                                     </div>
@@ -240,7 +241,7 @@
                         <li><a href="contact.html">Contact</a></li>
                     </ul>
                     <p class="copyright">
-                        &copy; All rights reserved by <a href="https://instagram.com/0x1772/"><span>0x1772</span></a>
+                        &copy; All rights reserved by <a href="https://instagram.com/mikailustunerr/"><span>Mikail Üstüner</span></a>
                     </p>
                 </div>
             </div>
