--- a/works.html
+++ b/works.html
@@ -5,11 +5,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="author" content="mikail üstüner">
-    <meta name="keywords" content="mikail, üstüner, developer, web, penetration, testing, security, tools, güvenlik, türkiye, siber, güvenlik, uzman, yazılım, geliştirici, data, scientist, designer, creator, 0x1772, 0x1773, 0x1771, reach, contact, javascript, php, ruby, languages, english, coffee, projects, github">
-    <meta name="description" content="mikail üstüner tarafından geliştirilmiş ve 0x1772.me alan adıyla kullanıma sunulan portfolyo internet sitesi çalışmalar sayfası">
+    <meta name="keywords" content="mikail, üstüner, developer, web, penetration, testing, security, tools, güvenlik, türkiye, siber, güvenlik, uzman, yazılım, geliştirici, data, scientist, designer, creator, Mikail Üstüner, 0x1773, 0x1771, reach, contact, javascript, php, ruby, languages, english, coffee, projects, github">
+    <meta name="description" content="mikail üstüner tarafından geliştirilmiş ve Mikail Üstüner.me alan adıyla kullanıma sunulan portfolyo internet sitesi çalışmalar sayfası">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
-    <title>0x1772</title>
+    <title>Mikail Üstüner</title>
 
     <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com/">
@@ -42,6 +42,7 @@
                             <li class="active"><a href="works.html">Works</a></li>
                             <li><a href="contact.html">Contact</a></li>
                             <li><a href="space.html">Space</a></li>
+                            <li><a href="pcdesk.html">JSDesk</a></li>
                         </ul>
                         <a href="contact.html" class="theme-btn">Let's talk</a>
                     </nav>
@@ -208,7 +209,7 @@
                         <li><a href="contact.html">Contact</a></li>
                     </ul>
                     <p class="copyright">
-                        &copy; All rights reserved by <a href="https://instagram.com/0x1772/"><span>0x1772</span></a>
+                        &copy; All rights reserved by <a href="https://instagram.com/mikailustunerr/"><span>Mikail Üstüner</span></a>
                     </p>
                 </div>
             </div>
