--- a/credentials.html
+++ b/credentials.html
@@ -160,6 +160,8 @@
                         <li><a href="about.html">About</a></li>
                         <li><a href="works.html">Works</a></li>
                         <li><a href="contact.html">Contact</a></li>
+                        <li><a href="space.html">Space</a></li>
+                        <li><a href="pcdesk.html">JSDesk</a></li>
                     </ul>
                     <p class="copyright">
                         &copy; All rights reserved by <a href="https://instagram.com/mikailustunerr/"><span>Mikail Üstüner</span></a>
